style.css
/*Reset*/
*,*::before,*::after{
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

/*Colours*/
:root{
	--darkgrey: #3E4A4B;
	--mediumgrey: #B8CBCE;
	--lightgrey: #D2E7EA;

	--darkpink: #FD11AD;
  --mediumpink: #F9B5D8;
  --lightpink: #FEE0F8;

	--darkpurple: #620CA6;
	--mediumpurple: #B05AF3;
	--lightpurple: #CDA9FF;

	--darkblue: #4ABDAC;
	--mediumblue: #66D3AA;
	--lightblue: #E8FFF6;

	--darkyellow: #C6A30A;
	--mediumyellow: #EFC501;
	--lightyellow: #FFEDA8;
	--accentyellow: #786200;
}

/*Font*/
@font-face {
  font-family: "Pixelated MS Sans Serif";
  src: url("fonts/converted/ms_sans_serif.woff") format("woff");
  src: url("fonts/converted/ms_sans_serif.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Pixelated MS Sans Serif";
  src: url("fonts/converted/ms_sans_serif_bold.woff") format("woff");
  src: url("fonts/converted/ms_sans_serif_bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
}

/*General Settings*/
body{
	background-image: url("images/BG.jpg");
	background-repeat: repeat;
  font-family: "Pixelated MS Sans Serif";
  font-size: 1rem;
  line-height: 1.6rem;
  letter-spacing: 2;
}

nav{
  height: 120px;
	width: 100%;
  background-color: var(--mediumgrey);
	border-top: 4px solid #fff;
	border-left: 4px solid #fff;
	box-shadow: 4px 4px 1px var(--darkgrey);
  position: fixed;
	top: 0px;
	display: flex;
	flex-direction: column;
	align-items: center;
	z-index: 3;
	padding-top: 20px;
}

#wrapper{
	position: absolute;
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
}

h1{
  font-family: "Bebas Neue";
  font-size: 8rem;
  letter-spacing: .9rem;
  color: var(--darkpink);
  text-shadow: 10px 10px var(--mediumpink);
  line-height: 8rem;
}

h2{
  font-family: "Bebas Neue";
  font-size: 3rem;
  letter-spacing: .3rem;
  line-height: 3rem;
  color: var(--darkpink);
}

h3{
  font-size: 1.5rem;
  font-weight: 100;
}

h4{
	font-size: 1.5rem;
	color: #000;
	font-weight: 100;
	padding-bottom: .3rem;
}

h5{
	font-size: .8rem;
	line-height: 1.6rem;
	letter-spacing: 2;
	font-weight: 100;
	color: var(--accentyellow);
	text-transform: uppercase;
}

strong{
	text-decoration: underline;
	color: #fff;
	font-weight: 100;
}

#image{
	height: auto;
	width: 100%;
}

#resizeimage{
	height: 100%;
	width: auto;
}

p{
	padding-bottom: 1.6rem;
}

/*Links Formatting*/
a{
	color: #fff;
	background-color: var(--mediumgrey);
	font-size: 2rem;
	line-height: 2;
	text-align: center;
	text-decoration: none;
	box-shadow: 4px 4px 1px rgba(0, 0, 0, .5);
	border-top: 4px solid rgba(255,255,255, .5);
	border-left: 4px solid rgba(255,255,255, .5);
}

a:hover, a:focus, a:active{
	color: var(--darkgrey);
	background-color: var(--lightgrey);
	box-shadow: 4px 4px 1px rgba(255,255,255, .5);
	border-top: 4px solid rgba(0, 0, 0, .5);
	border-left: 4px solid rgba(0, 0, 0, .5);
}

a:active{
	outline: .01rem dotted #000000;
  outline-offset: -.2rem;
}

/*Grid Setup*/
.grid{
  display: inline-grid;
  grid-template-columns: repeat(10, 1fr);
  margin-left: 20px;
  margin-right: 20px;
  grid-gap: 20px;
  width: 100%;
  min-width: 900px;
  max-width: 1400px;
}

.gridrow{
	display: inline-grid;
	grid-template-rows: repeat(5, 25%);
	width: 100%;
	height: 1.6rem;
}

/*Nav*/
.navlink-1{
	grid-column: 2 / span 2;
}

.navlink-2{
	grid-column: 4 / span 2;
}

.navlink-3{
	grid-column: 6 / span 2;
}

.navlink-4{
	grid-column: 8 / span 2;
}

#anchor1{
	grid-row: 1 / span 1;
}

#anchor2{
	margin-bottom: 8.0rem;
	grid-row: 2 / span 1;
}

#anchor3{
	margin-bottom: 8.0rem;
	grid-row: 3 / span 1;
}

#anchor4{
	margin-bottom: 8.0rem;
	grid-row: 4 / span 1;
}

#anchor5{
	margin-bottom: 8.0rem;
	height: 2.6rem;
	grid-row: 5 / span 1;
}


/*Title*/
#titleblock{
	margin-top: 210px;
  margin-bottom: 50px;
	max-height: 500px;
	position: relative;
}

.title{
  grid-column: 3 / span 3;
}

.icon{
  grid-column: 7 / span 2;
}

/*Popup General*/
#popupwrapper{
	margin-bottom: 8.0rem;
}

@media (max-width: 800px) {
	#popupwrapper {
		padding-bottom: 4.0rem;
	}
}

.popup{
  width: 100%;
  height: auto;
  grid-column: 3 / span 6;
  display: inline-grid;
  align-items: center;
	position: relative;
	padding-bottom: 1.6rem;
}

.popupheader{
  width: 100%;
  height: 2.6rem;
  grid-column: 1 / span 6;
  line-height: 2.6rem;
  padding-left: .6rem;
}

/*Pink Popup*/
#popup-pink{
  background: var(--lightpink);
  box-shadow: 10px 10px var(--mediumpink);
}

#header-pink{
  background-color: var(--darkpink);
	margin-bottom: 1.6rem;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
}

#image-pink{
  grid-column: 1 / span 3;
  padding-left: 1rem;
	padding-right: 1rem;
}

#popuptext-pink{
  grid-column: 4 / span 3;
  padding-right: 1rem;
  padding-left: 1rem;
}

/*Purple Popup*/
#popup-purple{
  background: var(--lightpurple);
  box-shadow: 10px 10px var(--mediumpurple);
}

#header-purple{
  background-color: var(--darkpurple);
	margin-bottom: 1.6rem;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
}

#image-purple{
	grid-column: 1 / span 3;
  padding-left: 1rem;
	padding-right: 1rem;
}

#popuptext-purple{
	grid-column: 4 / span 3;
  padding-right: 1rem;
  padding-left: 1rem;
}

/*Blue Popup*/
#popup-blue{
  background: var(--lightblue);
  box-shadow: 10px 10px var(--mediumblue);
  align-items: none;
}

#header-blue{
  background-color: var(--darkblue);
	margin-bottom: 1.6rem;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
}

#popuptext-blue{
	text-align: center;
	padding-right: 2rem;
	padding-left: 2rem;
	grid-column: 2 / span 4;
}

#image-blue{
	text-align: center;
	padding-right: 1.6rem;
	padding-left: 1.6rem;
	grid-column: 3 / span 2;
}

/*Yellow Popup*/
#popup-yellow{
  background: var(--lightyellow);
  box-shadow: 10px 10px var(--mediumyellow);
}

#header-yellow{
  background-color: var(--darkyellow);
	margin-bottom: 1.6rem;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
}

#popuptext-yellow{
	padding-right: 2rem;
	padding-left: 2rem;
	grid-column: 1 / span 6;
}

#image-yellow{
	text-align: center;
	padding-right: 1.6rem;
	padding-left: 1.6rem;
	height: 10rem;
}

/*Form*/
.questionwrapper{
	padding-bottom: 1.6rem;
}

.question{
	display: inline-block;
	width: 32%;
}

#questioncontent{
	display: flex;
	justify-content: space-between;
	margin-bottom: .8rem;
}

#extralarge{
	width: 66%;
}

#large{
	width: 50%;
}

#medium{
	width: 33%;
}

#small{
	width: 16%;
}

input[type=text],input[type=email]{
	height: 3.0rem;
	font-family: "Pixelated MS Sans Serif";
	font-size: 1rem;
	line-height: 1.6rem;
	letter-spacing: 2;
	padding-left: .8rem;
	padding-right: .8rem;
	border: none;
	border-top: 2px solid var(--darkyellow);
	border-left: 2px solid var(--darkyellow);
}

input[type=text]::placeholder,input[type=email]::placeholder{
	color: rgba(0,0,0,.25);
}

input[type=text]:focus,input[type=email]:focus,select:focus{
	outline: .1rem dotted #000000;
	outline-offset: -.4rem;
}

input[type=text].extralarge,input[type=email].extralarge{
	width: 100%;
}

input[type=text].large,input[type=email].large{
	width: 100%;
}

input[type=text].medium,input[type=email].medium{
	width: 100%;
}

input[type=text].small,input[type=email].small{
	width: 100%;
}

select{
	height: 3.0rem;
	font-family: "Pixelated MS Sans Serif";
	font-size: 1rem;
	line-height: 1.6rem;
	letter-spacing: 2;
	padding-left: .8rem;
	padding-right: .8rem;
	border: none;
	border-top: 2px solid var(--darkyellow);
	border-left: 2px solid var(--darkyellow);
}

input[type=submit]{
	background: var(--darkyellow);
	height: 5.0rem;
	width: auto;
	font-family: "Pixelated MS Sans Serif";
	font-size: 1rem;
	line-height: 1.6rem;
	letter-spacing: 2;
	padding-left: 2rem;
	padding-right: 2rem;
	border: none;
	box-shadow: 2px 2px 1px rgba(0, 0, 0, .5);
	border-top: 2px solid rgba(255,255,255, 1);
	border-left: 2px solid rgba(255,255,255, 1);
	margin-top: .8rem;
	-webkit-appearance: none;
}

input[type=submit]:focus, input[type=submit]:active{
	outline: .01rem dotted #000000;
  outline-offset: -.4rem;
}

input[type=submit]:active{
	box-shadow: 2px 2px 1px rgba(255,255,255, 1);
	border-top: 2px solid rgba(0, 0, 0, .5);
	border-left: 2px solid rgba(0, 0, 0, .5);
}

